--- a/latihan/.env
+++ b/latihan/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:fAuOu8nV4IiOI5sB2tXJ/42zTdzxUZ2iT+GqKJHKXCs=
+APP_KEY=base64:JZTbunet3PIJPUDFwD7hQv3Rc82ElYoJqNKmcG5HOQo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=laravelsi41
 DB_USERNAME=root
 DB_PASSWORD=
 
